<resources>
    <string name="app_name">Sudoku Prime</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="solve">Solve</string>
    <string name="reset">Reset</string>
    <string name="medium">Generate</string>
    
    <string name="enter">Enter</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>
    
    <string name="YOU_WIN">YOU WIN!</string>
    <string name="home">Home</string>
</resources>
