<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamePlayActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        custom:layout_constraintBottom_toTopOf="@+id/SudokuBoard"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent">

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="34sp" />
    </LinearLayout>


    <com.example.sudokuprime.SudokuBoard
        android:id="@+id/SudokuBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@color/white"
        custom:boardColor="@color/black"
        custom:cellFillColor="@color/teal_200"
        custom:cellHighlightColor="#2600DDFF"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:letterColor="@color/black"
        custom:letterColorSolve="@color/green">

    </com.example.sudokuprime.SudokuBoard>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/SudokuBoard"
        android:layout_marginTop="30dp"
        android:background="#F3FCF4"
        >

        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNOnePress"
            android:text="@string/one"
            android:textColor="@color/black"
            android:textSize="24sp"
            />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNTwoPress"
            android:text="@string/two"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNThreePress"
            android:text="@string/three"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNFourPress"
            android:text="@string/four"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNFivePress"
            android:text="@string/five"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNSixPress"
            android:text="@string/six"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNSevenPress"
            android:text="@string/seven"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNEightPress"
            android:text="@string/eight"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="BTNNinePress"
            android:text="@string/nine"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/solve_btn"
        android:text="@string/clear"
        android:textSize="18sp"
        android:onClick="clear"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.49"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/hintButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/solve_btn"
        android:onClick="clear"
        android:text="@string/hint"
        android:textSize="18sp"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.2"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/clearButton" />

    <Button
        android:id="@+id/solveButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/solve_btn"
        android:onClick="solve"
        android:text="@string/solve"
        android:textSize="18sp"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.8"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/clearButton" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/solve_btn"
        android:onClick="back"
        android:text="@string/back"
        android:textSize="18sp"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.8"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/hintButton"
        custom:layout_constraintVertical_bias="0.22000003" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/solve_btn"
        android:onClick="reset"
        android:text="@string/reset"
        android:textSize="18sp"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintHorizontal_bias="0.2"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/hintButton"
        custom:layout_constraintVertical_bias="0.22000003" />

</androidx.constraintlayout.widget.ConstraintLayout>